// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action.state as function: {"type":"SECOND"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {
      "baz": "bla",
      "foo": undefined,
    },
    "url": "/second",
  },
]
`;

exports[`action.state as function: {"type":"SECOND"} - history_index 1`] = `1`;

exports[`action.state as function: {"type":"SECOND"} - response 1`] = `
Object {
  "hash": "",
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {
          "baz": "bla",
          "foo": undefined,
        },
        "url": "/second",
      },
    ],
    "index": 1,
    "kind": "next",
    "length": 2,
    "pathname": "/second",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": Object {
            "foo": "bar",
          },
          "url": "/second",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 0,
      "kind": "back",
      "length": 2,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {
    "baz": "bla",
    "foo": undefined,
  },
  "type": "SECOND",
}
`;

exports[`action.state as function: {"type":"SECOND"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`action.state as function: {"type":"SECOND"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`action.state as function: {"type":"SECOND"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {
          "baz": "bla",
          "foo": undefined,
        },
        "url": "/second",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 1,
    "kind": "next",
    "length": 2,
    "params": Object {},
    "pathname": "/second",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": Object {
            "foo": "bar",
          },
          "url": "/second",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 0,
      "kind": "back",
      "length": 2,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {
      "baz": "bla",
      "foo": undefined,
    },
    "status": 200,
    "type": "SECOND",
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`action.state as function: {"type":"SECOND"} - title 1`] = `"SECOND"`;
